--- a/apps/ethanelliott.ca/src/index.html
+++ b/apps/ethanelliott.ca/src/index.html
@@ -6,7 +6,7 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <body>
+  <body class="mat-app-background blue-theme">
     <ee-root></ee-root>
   </body>
 </html>
