seo or something

--- a/apps/ethanelliott.ca/src/index.html
+++ b/apps/ethanelliott.ca/src/index.html
@@ -4,6 +4,39 @@
     <meta charset="utf-8" />
     <title>Ethan Elliott</title>
     <base href="/" />
+
+    <meta name="title" content="Ethan Elliott" />
+    <meta name="robots" content="index, follow" />
+
+    <meta
+      name="description"
+      content="Ethan Elliott is a software developer crafting slick, efficient, and user-friendly experiences."
+    />
+    <meta name="author" content="Ethan Elliott" />
+    <meta
+      name="keywords"
+      content="Ethan Elliott, developer, web developer, software engineer, engineer, JavaScript, angular, typescript, Node.js, portfolio, coding, dev"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="revisit-after" content="1 days" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
+
+    <meta property="og:title" content="Ethan Elliott" />
+    <meta
+      property="og:description"
+      content="Check out Ethan Elliott's portfolio — where clean code meets crisp design."
+    />
+    <meta property="og:url" content="https://ethanelliott.ca" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Ethan Elliott" />
+    <meta
+      name="twitter:description"
+      content="Portfolio of Ethan Elliott, full-stack dev with a passion for clean code and clever solutions."
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,6 +44,63 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "WebSite",
+            "@id": "https://ethanelliott.ca/#website",
+            "url": "https://ethanelliott.ca",
+            "name": "Ethan Elliott",
+            "description": "Ethan Elliott — full-stack developer building sleek, performant apps with modern web tech.",
+            "publisher": {
+              "@id": "https://ethanelliott.ca/#me"
+            }
+          },
+          {
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "@id": "https://ethanelliott.ca/#me",
+            "name": "Ethan Elliott",
+            "url": "https://ethanelliott.ca",
+            "image": "https://ethanelliott.ca/images/ethan-profile.jpg",
+            "sameAs": ["https://github.com/ethanelliott"],
+            "jobTitle": "Software Developer",
+            "description": "Ethan Elliott is a full-stack developer building sleek, performant web apps with modern tech.",
+            "knowsAbout": [
+              "JavaScript",
+              "Typescript",
+              "Angular",
+              "Node.js",
+              "Web Development",
+              "APIs",
+              "UI/UX",
+              "DevOps"
+            ],
+            "alumniOf": {
+              "@type": "CollegeOrUniversity",
+              "name": "Ontario Tech University"
+            }
+          },
+          {
+            "@type": "WebPage",
+            "@id": "https://ethanelliott.ca/#webpage",
+            "url": "https://ethanelliott.ca",
+            "name": "Ethan Elliott — Software Developer",
+            "description": "Ethan Elliott — full-stack developer building sleek, performant apps with modern web tech.",
+            "inLanguage": "en",
+            "isPartOf": {
+              "@id": "https://ethanelliott.ca/#website"
+            },
+            "about": {
+              "@id": "https://ethanelliott.ca/#me"
+            }
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <ee-root></ee-root>
