--- a/apps/wheel/src/index.html
+++ b/apps/wheel/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -6,7 +6,10 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <meta name="description" content="A fun randomizer wheel to help you make decisions!" />
+    <meta
+      name="description"
+      content="A fun randomizer wheel to help you make decisions!"
+    />
   </head>
   <body>
     <app-root></app-root>
