--- a/apps/landing/src/index.html
+++ b/apps/landing/src/index.html
@@ -5,6 +5,11 @@
     <title>Elliott Haus</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Elliott Haus - Internal services dashboard for home infrastructure."
+    />
+    <meta name="theme-color" content="#6366f1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
